--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "firebase": "^12.8.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "react": "19.2.3",
